--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "shopi",
-  "version": "1.0.0",
-  "description": "<!-- hi",
-  "main": "index.js",
-  "scripts": {
-    "k": "sui-mono commit",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "bnjmn&Pdr",
-  "license": "ISC",
-  "devDependencies": {
-    "@s-ui/mono": "^2.45.0"
-  }
+    "name": "shopi",
+    "version": "1.0.0",
+    "description": "<!-- hi",
+    "main": "index.js",
+    "workspaces": [
+        "backend/**"
+    ],
+    "scripts": {
+        "k": "sui-mono commit",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "bnjmn&Pdr",
+    "license": "ISC",
+    "devDependencies": {
+        "@s-ui/mono": "^2.45.0"
+    }
 }
